--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
+    "react-select": "^5.7.3",
     "recoil": "^0.7.6"
   },
   "devDependencies": {
